# prompt-mode-min

./: .gitignore  LICENSE  README.md  prompt-mode-min.txt  pyproject.toml
.github/workflows/: ci.yml
evals/: run_eval.py
examples/tasks/: bug_report_summarize.md  email_tone_fix.md  sql_query_review.md
src/: cli.py
src/prompt_mode/: __init__.py  core.py  llm.py  schemas.py  utils.py
src/prompt_mode/prompts/: critic_guidlines.txt  rubric_example.json  system_v1.txt  system_v2.txt
tests/: test_cli_smoke.py  test_core.py  test_llm_mock.py
tests/fixtures/: mock_response.json
